--- a/Home_Manager.html
+++ b/Home_Manager.html
@@ -121,15 +121,13 @@
        <div class="dropdown">
             <a href="#">Orders</a>
             <div class="dropdown-content">
-                <a href="menu_online.jsp" onclick="addNotification('New online order')">Order Online</a>
-                <a href="menu_dine.jsp" onclick="addNotification('New dine-in order')">Dine-In</a>
+                <a href="order_view.jsp" onclick="addNotification('New online order')">Online Orders</a>
+                <a href="orderd_view.jsp" onclick="addNotification('New dine-in order')">Dine-In</a>
             </div>
         </div>
         <a href="customerlist.jsp">Customers</a>    
         <a href="bookingview.jsp">Bookings</a> 
-        <a href="Offers.html">Special Offers</a>
-        <a href="Gallery.html">Gallery</a>
-        <a href="contact.html">Contact Us</a>
+        
     </div>
         <div class="footer">
         &copy; 2024 Queen's Corner Restaurant. All rights reserved.
